--- a/caseModel1.html
+++ b/caseModel1.html
@@ -18,7 +18,7 @@
     </tr>
     <tr>
       <td width="236" colspan="2" valign="top" style="background:#D9D9D9;"><p align="center">动作<span lang="EN-US" xml:lang="EN-US"> </span></p></td>
-      <td width="236" valign="top" style="background:#D9D9D9;"><p align="center">期望的反应<span lang="EN-US" xml:lang="EN-US"> </span></p></td>
+      <td width="236" valign="top" style="background:#D9D9D9;"><p align="center">期望的结果<span lang="EN-US" xml:lang="EN-US"> </span></p></td>
       <td width="247" valign="top" style="background:#D9D9D9;"><p align="center">实际情况<span lang="EN-US" xml:lang="EN-US"> </span></p></td>
     </tr>
     <!--records-->
