--- a/testDataTrans.html
+++ b/testDataTrans.html
@@ -9,6 +9,7 @@
 <script src="/js/plugin/jquery.json.js"></script>
 <script src="/js/lib/j79/basic.js"></script>
 <script src="/js/lib/j79/data.transporter.js"></script>
+<script src="/js/app/data.transporter.js"></script>
 <script>
     $(document).ready(function (e) {
 
@@ -21,13 +22,21 @@
                 "password":"123456"
             },
             "success":function(data){
-                console.log("load success!");
+                console.log("result success");
+                console.log(data);
+
+                /*console.log("load success!");
                 if(data.code!=0){
                     console.log("result failed!");
                 }else{
                     console.log("result success!");
-                }
+                }*/
                 //console.log(data);
+            },
+            "failed":function(code,msg){
+                console.log("result failed!");
+                console.log(code);
+                console.log(msg);
             }
 
         })
