--- a/caseModel1.html
+++ b/caseModel1.html
@@ -1,25 +1,25 @@
 <table border="1" cellspacing="0" cellpadding="0">
   <tbody>
     <tr>
-      <td width="236" valign="top" style="background:#D9D9D9;"><p>用例编号<span lang="EN-US" xml:lang="EN-US"> </span></p></td>
-      <td width="616" colspan="3" valign="top"><p><span lang="EN-US" xml:lang="EN-US">##id##</span></p></td>
+      <td width="236" valign="top" style="background:#D9D9D9;"><p><span>用例编号</span></p></td>
+      <td width="616" colspan="3" valign="top"><p><span>##id##</span></p></td>
     </tr>
     <tr>
-      <td width="236" valign="top" style="background:#D9D9D9;"><p>功能描述<span lang="EN-US" xml:lang="EN-US"> </span></p></td>
-      <td width="616" colspan="3" valign="top"><p>##des##</p></td>
+      <td width="236" valign="top" style="background:#D9D9D9;"><p><span>功能描述</span></p></td>
+      <td width="616" colspan="3" valign="top"><p><span>##des##</span></p></td>
     </tr>
     <tr>
-      <td width="236" valign="top" style="background:#D9D9D9;"><p>用例目的<span lang="EN-US" xml:lang="EN-US"> </span></p></td>
-      <td width="616" colspan="3" valign="top"><p>##goal##</p></td>
+      <td width="236" valign="top" style="background:#D9D9D9;"><p><span>用例目的</span></p></td>
+      <td width="616" colspan="3" valign="top"><p><span>##goal##</span></p></td>
     </tr>
     <tr>
-      <td width="236" valign="top" style="background:#D9D9D9;"><p>前提条件<span lang="EN-US" xml:lang="EN-US"> </span></p></td>
-      <td width="616" colspan="3" valign="top"><p>##cond##</p></td>
+      <td width="236" valign="top" style="background:#D9D9D9;"><p><span>前提条件</span></p></td>
+      <td width="616" colspan="3" valign="top"><p><span>##cond##</span></p></td>
     </tr>
     <tr>
-      <td width="236" colspan="2" valign="top" style="background:#D9D9D9;"><p align="center">动作<span lang="EN-US" xml:lang="EN-US"> </span></p></td>
-      <td width="236" valign="top" style="background:#D9D9D9;"><p align="center">期望的结果<span lang="EN-US" xml:lang="EN-US"> </span></p></td>
-      <td width="247" valign="top" style="background:#D9D9D9;"><p align="center">实际情况<span lang="EN-US" xml:lang="EN-US"> </span></p></td>
+      <td width="236" colspan="2" valign="top" style="background:#D9D9D9;"><p align="center"><span>动作</span></p></td>
+      <td width="236" valign="top" style="background:#D9D9D9;"><p align="center"><span>期望的结果</span></p></td>
+      <td width="247" valign="top" style="background:#D9D9D9;"><p align="center"><span>实际情况</span></p></td>
     </tr>
     <!--records-->
   </tbody>
