--- a/j79frame/app/pages/login.html
+++ b/j79frame/app/pages/login.html
@@ -105,6 +105,8 @@
           let loginM=new loginManager({
             "success":function(data){
               console.log("login success");
+              console.log(data);
+              console.log(localStorage)
               /*console.log(data);
               console.log(localStorage);*/
               window.location.href="user.html"
