--- a/j79frame/app/pages/user.html
+++ b/j79frame/app/pages/user.html
@@ -87,14 +87,15 @@
               <table class="table table-striped" id="userList">
                 <thead>
                   <tr>
-                    <th>编号</th>
                     <th>用户名</th>
+                    <th>昵称</th>
                     <th>联系方式</th>
                     <th>注册时间</th>
+                    <th>状态</th>
                     <th>操作</th>
                   </tr>
                 </thead>
-                <tbody>
+                <tbody id="list1">
                   <!--<tr>
                     <td>00001012</td>
                     <td>King2020</td>
@@ -112,6 +113,7 @@
                 </tbody>
               </table>
             </div>
+          <div class="pager" id="pager1"></div>
             <h2 class="sub-header">&nbsp;</h2>
         </div>
       </div>
@@ -126,18 +128,32 @@
     <!-- j79frame js -->
     <script src="../../../js/lib/j79/basic.js"></script>
     <script src="../../../js/lib/j79/data.transporter.js"></script>
+    <script src="../../../js/lib/j79/list.base.js"></script>
+    <script src="../../../js/lib/j79/list.dynamic.js"></script>
     <script src="../../../js/app/data.transporter.js"></script>
-    <script src="../../../js/lib/j79/login.manager.js"></script>
-    <script src="../../../js/app/login.manager.js"></script>
+    <script src="../../../js/app/list.users.js"></script>
+
+
     <script>
       $(document).ready(function (e) {
 
-        let t=localStorage.getItem("profile");
-        let profile=JSON.parse(t);
+        let t=localStorage.getItem("token");
+        //let profile=JSON.parse(t);
 
-        console.log(profile.email);
+        console.log(t);
 
-        let dataT=new dataTransporter();
+        let list1=new listUsers({
+
+          "ui":{
+            "list":"#list1",
+            "pager":"#pager1",
+          }
+        });
+        list1.load();
+
+
+
+        /*let dataT=new dataTransporter();
         dataT.dataGet({
           "url":"/api/admin/users",
           "success":function(data1){
@@ -169,57 +185,13 @@
 
 
           },
-          "failed":function(code,msg){
+          "failed":function(caller,code,msg,xmlHR){
             console.log("result failed!");
             console.log(code);
             console.log(msg);
+            console.log(xmlHR);
           }
-        })
-
-        /*let loginM=new loginManager({
-          "success":function(data){
-            console.log("login success");
-            console.log(data)
-          },
-          "failed":function(code,msg){
-            console.log("login failed");
-            console.log(code);
-            console.log(msg);
-          }
-        })*/
-
-        /*loginM.login({
-          "username":"jinrong",
-          "password":"123456"
-        })*/
-
-        /*let dataT=new dataTransporter();
-
-        dataT.dataPost({
-            "url":"https://apps.kbitc.com:8443/api/auth/login",
-            "data":{
-                "username":"jinrong",
-                "password":"123456"
-            },
-            "success":function(data){
-                console.log("result success");
-                console.log(data);
-
-                /!*console.log("load success!");
-                if(data.code!=0){
-                    console.log("result failed!");
-                }else{
-                    console.log("result success!");
-                }*!/
-                //console.log(data);
-            },
-            "failed":function(code,msg){
-                console.log("result failed!");
-                console.log(code);
-                console.log(msg);
-            }
-
-        })*/
+        });*/
 
 
       });
