--- a/j79frame/app/pages/user.html
+++ b/j79frame/app/pages/user.html
@@ -144,6 +144,8 @@
 
         let list1=new listUsers({
 
+          "perPage":2,
+
           "ui":{
             "list":"#list1",
             "pager":"#pager1",
