--- a/j79frame/app/pages/login.html
+++ b/j79frame/app/pages/login.html
@@ -93,6 +93,7 @@
 
       <!-- j79frame js -->
       <script src="../../../js/lib/j79/basic.js"></script>
+      <script src="../../../js/app/j79.app.js"></script>
       <script src="../../../js/lib/j79/data.transporter.js"></script>
       <script src="../../../js/app/data.transporter.js"></script>
       <script src="../../../js/lib/j79/login.manager.js"></script>
