--- a/j79frame/app/pages/role_add.html
+++ b/j79frame/app/pages/role_add.html
@@ -42,7 +42,7 @@
           <a class="navbar-brand" href="#">良乡大学城3D沙盘指挥系统管理后台</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
+          <ul id="topNaviContainer" class="nav navbar-nav navbar-right">
             <li><a href="#">首页</a></li>
             <li><a href="#">用户</a></li>
             <li><a href="#">权限</a></li>
