--- a/j79frame/app/pages/user_add.html
+++ b/j79frame/app/pages/user_add.html
@@ -90,12 +90,14 @@
   
   
   
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button id="btnSubmit" type="button" class="btn btn-default">提交</button>
-    </div>
-  </div>
+
 </form>
+      <hr/>
+      <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+              <button id="btnSubmit" type="button" class="btn btn-primary">提交</button>
+          </div>
+      </div>
 </div>
           
             </div>
@@ -119,20 +121,66 @@
     <script src="../../../js/app/data.transporter.js"></script>
     <script src="../../../js/lib/j79/form.builder.js"></script>
     <script src="../../../js/lib/j79/edit.base.js"></script>
+    <script src="../../../js/app/edit.user.js"></script>
 
     <script>
       $(document).ready(function (e) {
 
-          let editor=new editBase({
-            "url":"/api/admin/users",
-            "ui":{
-              "form":"#formEdit",
-              "submit":"#btnSubmit"
-            },
-            "settingXML":"../../../j79frame/app/settings/form_user_add.xml"
-          });
 
-          editor.view({"mode":0});
+          let currentId=j79.getURLParam('id');
+          let detailData;
+          if(currentId){//edit:
+
+              let dataT=new dataTransporter();
+              dataT.dataGet({
+                  "url":"/api/admin/users",
+                  "data":{
+                      "id":currentId
+                  },
+                  "success":function(data, txtStatus, jqXHR){
+
+                      detailData=data.data && data.data.length>0 ? data.data[0]:{};
+                      console.log("get user detail:");
+                      console.log(detailData);
+
+                      let tt=detailData.timestamp;
+                      if(tt){
+                          tt=tt.toString().replace('T',' ');
+                          tt=tt.replace('.000Z','');
+                          detailData.timestamp=tt;
+                      }
+
+                      console.log(detailData);
+
+                      if(detailData){
+                          let editor=new editUser({
+                              "data":detailData,
+                              "ui":{
+                                  "form":"#formEdit",
+                                  "submit":"#btnSubmit"
+                              },
+                          });
+
+                          editor.viewEdit()
+                      }
+
+
+
+                  }
+              })
+
+          }else{//add new:
+              let editor=new editUser({
+                  "ui":{
+                      "form":"#formEdit",
+                      "submit":"#btnSubmit"
+                  },
+
+              });
+              editor.viewAdd()
+          }
+
+
 
 
 
