--- a/j79frame/app/pages/log.html
+++ b/j79frame/app/pages/log.html
@@ -90,7 +90,7 @@
          
           
             <div class="table-responsive">
-              <table class="table table-striped">
+              <table class="table table-striped table-hover">
                 <thead>
                   <tr>
                     <th>编号</th>
