--- a/pages/log.html
+++ b/pages/log.html
@@ -117,20 +117,20 @@
     </div>
 
     <!-- fundamental js -->
-    <script src="/js/jquery/1.11.3/jquery.min.js"></script>
-    <script src="/js/plugin/jquery.json.js"></script>
+    <script src="../js/jquery/1.11.3/jquery.min.js"></script>
+    <script src="../js/plugin/jquery.json.js"></script>
     <!-- Bootstrap core JavaScript=============================================== -->
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- j79frame js -->
-    <script src="../../../js/lib/j79/basic.js"></script>
-    <script src="../../../js/app/j79.app.js"></script>
-    <script src="../../../js/plugin/j79.date.selector.js"></script>
-    <script src="../../../js/lib/j79/data.transporter.js"></script>
-    <script src="../../../js/lib/j79/list.base.js"></script>
-    <script src="../../../js/lib/j79/list.dynamic.js"></script>
-    <script src="../../../js/app/data.transporter.js"></script>
-    <script src="../../../js/app/list.logs.js"></script>
+    <script src="../js/lib/j79/basic.js"></script>
+    <script src="../js/app/j79.app.js"></script>
+    <script src="../js/plugin/j79.date.selector.js"></script>
+    <script src="../js/lib/j79/data.transporter.js"></script>
+    <script src="../js/lib/j79/list.base.js"></script>
+    <script src="../js/lib/j79/list.dynamic.js"></script>
+    <script src="../js/app/data.transporter.js"></script>
+    <script src="../js/app/list.logs.js"></script>
 
   <script>
     $(document).ready(function (e) {
