--- a/pages/login.html
+++ b/pages/login.html
@@ -86,18 +86,18 @@
     </div>
 
       <!-- fundamental js -->
-      <script src="/js/jquery/1.11.3/jquery.min.js"></script>
-      <script src="/js/plugin/jquery.json.js"></script>
+      <script src="../js/jquery/1.11.3/jquery.min.js"></script>
+      <script src="../js/plugin/jquery.json.js"></script>
       <!-- Bootstrap core JavaScript=============================================== -->
       <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
       <!-- j79frame js -->
-      <script src="../../../js/lib/j79/basic.js"></script>
-      <script src="../../../js/app/j79.app.js"></script>
-      <script src="../../../js/lib/j79/data.transporter.js"></script>
-      <script src="../../../js/app/data.transporter.js"></script>
-      <script src="../../../js/lib/j79/login.manager.js"></script>
-      <script src="../../../js/app/login.manager.js"></script>
+      <script src="../js/lib/j79/basic.js"></script>
+      <script src="../js/app/j79.app.js"></script>
+      <script src="../js/lib/j79/data.transporter.js"></script>
+      <script src="../js/app/data.transporter.js"></script>
+      <script src="../js/lib/j79/login.manager.js"></script>
+      <script src="../js/app/login.manager.js"></script>
       <script>
 
 
@@ -116,6 +116,7 @@
               console.log("login failed");
               console.log(code);
               console.log(msg);
+              alert("登录失败！");
             }
           });
 
