--- a/pages/user_add.html
+++ b/pages/user_add.html
@@ -60,8 +60,8 @@
           <ul class="nav nav-sidebar">
             <li ><a href="#">首页 <span class="sr-only">(current)</span></a></li>
             <li class="active"><a href="#"><i class="glyphicon glyphicon-user"></i> 用户管理</a></li>            
-            <li><a href="user.html"  target="_top"><i class="glyphicon glyphicon-knight"></i> 角色管理</a></li>
-            <li><a href="#"><i class="glyphicon glyphicon-lock"></i> 权限管理</a></li>
+            <!--<li><a href="user.html"  target="_top"><i class="glyphicon glyphicon-knight"></i> 角色管理</a></li>
+            <li><a href="#"><i class="glyphicon glyphicon-lock"></i> 权限管理</a></li>-->
           </ul>
           <hr/>
           <ul class="nav nav-sidebar">
