--- a/pages/role_add.html
+++ b/pages/role_add.html
@@ -56,8 +56,8 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
-          <ul class="nav nav-sidebar">
+        <div class="col-sm-3 col-md-2 sidebar" id="leftNav">
+          <ul class="nav nav-sidebar" >
             <li ><a href="#">首页 <span class="sr-only">(current)</span></a></li>
             <li ><a href="#"><i class="glyphicon glyphicon-user"></i> 用户管理</a></li>            
             <li class="active"><a href="#"><i class="glyphicon glyphicon-knight"></i> 角色管理</a></li>
@@ -124,6 +124,10 @@
 
     <script>
       $(document).ready(function (e) {
+
+          //set current channel
+          $('#leftNav').empty();
+          $('#leftNav').append(j79App.getLeftNaviHtml('role'));
 
         let userManger=new editRole({
           "ui":{
