--- a/pages/user.html
+++ b/pages/user.html
@@ -56,8 +56,8 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
-          <ul class="nav nav-sidebar">
+        <div class="col-sm-3 col-md-2 sidebar" id="leftNav">
+          <ul class="nav nav-sidebar" >
             <li ><a href="#">首页 <span class="sr-only">(current)</span></a></li>
             <li class="active"><a href="user.html" target="_top"><i class="glyphicon glyphicon-user"></i> 用户管理</a></li>
             <!--<li><a href="#"  target="_top"><i class="glyphicon glyphicon-knight"></i> 角色管理</a></li>
@@ -170,8 +170,13 @@
     <script>
       $(document).ready(function (e) {
 
-        let t=localStorage.getItem("token");
+        //let t=localStorage.getItem("token");
         //let profile=JSON.parse(t);
+
+
+        //set current channel
+        $('#leftNav').empty();
+        $('#leftNav').append(j79App.getLeftNaviHtml('user'));
 
         //console.log(t);
 
