--- a/pages/test.html
+++ b/pages/test.html
@@ -6,19 +6,22 @@
 </head>
 <body>
 <h1>TEST</h1>
-<div style="background:url(images/topbar_bg.jpg) center no-repeat; background-size: 100% 100%; width: 1800px; height: 500px;">
-    <div class="img-area-selector" style="width: 1800px; height: 500px; position: relative;"  data-saver="imgAreaData">
+<input type="file" id="fileImg" />
+<div class="img-select-container" style="position: relative; border:1px solid #ddd;">
+    <img src="" id="img"/>
+    <div class="img-area-selector" style="width: 1800px; height: 500px; position:absolute;left:0px;top:0px;"  data-saver="imgAreaData" position-delta-x="300">
 
     </div>
-    <textarea id="imgAreaData"></textarea>
 </div>
 
-<script src="/js/jquery/1.11.3/jquery.min.js"></script>
-<script src="/js/plugin/jquery.json.js"></script>
-<script src="/js/plugin/bootstrap.min.js"></script>
-<script src="/js/app/j79.app.js"></script>
-<script src="/js/lib/j79/basic.js"></script>
-<script src="/js/plugin/j79.img.area.selector.js"></script>
+<textarea id="imgAreaData" style="height:100px;"></textarea>
+
+<script src="../js/jquery/1.11.3/jquery.min.js"></script>
+<script src="../js/plugin/jquery.json.js"></script>
+<script src="../js/plugin/bootstrap.min.js"></script>
+<script src="../js/app/j79.app.js"></script>
+<script src="../js/lib/j79/basic.js"></script>
+<script src="../js/plugin/j79.img.area.selector.js"></script>
 <script>
     $(document).ready(function (e) {
        /*$.get("test.php",function(data){
@@ -26,6 +29,25 @@
            console.log(jsData);
 
         });*/
+        $('#fileImg').change(function (e) {
+            var file=this;
+            if (!file.files || !file.files[0]) {
+                return;
+            }
+            var reader = new FileReader();
+            reader.onload = function (evt) {
+                document.getElementById('img').src = evt.target.result;
+                var image = evt.target.result;
+                $('#img').load(function(e){
+                    $('.img-area-selector').width($('#img').width());
+                    $('.img-area-selector').height($('#img').height());
+                    $('.img-select-container').width($('#img').width());
+                });
+
+            }
+            reader.readAsDataURL(file.files[0]);
+        })
+
     });
 </script>
 </body>
