--- a/pages/log.html
+++ b/pages/log.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Dashboard Template for Bootstrap</title>
+    <title>K3dviz-操作日志</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -116,7 +116,7 @@
                   <tr>
                     <th>编号</th>
 
-                    <th>用户ID</th>
+                    <th>用户名称</th>
 
                     <th>模块</th>
                     <th>动作</th>
