--- a/pages/userrole.html
+++ b/pages/userrole.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Dashboard Template for Bootstrap</title>
+    <title>K3dviz-用户角色</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -83,10 +83,10 @@
           <div class="panel panel-default">
             <div class="panel-body">
               <form class="form-inline" id="searchForm">
-                <div class="form-group">
+                <!--<div class="form-group">
                   <label for="userid">用户ID</label>
                   <input type="text" class="form-control" id="userid" placeholder="用户ID...">
-                </div>
+                </div>-->
 
                 <div class="form-group">
                   <label for="username">用户名</label>
@@ -94,7 +94,7 @@
                 </div>
 
                 <div class="form-group">
-                  <label for="userid">角色ID</label>
+                  <label for="roleid">角色ID</label>
                   <input type="text" class="form-control" id="roleid" placeholder="用户ID...">
                 </div>
 
@@ -116,8 +116,10 @@
                 <thead>
                   <tr>
                     <th>编号</th>
-                    <th>用户ID</th>
+
                     <th>用户名称</th>
+
+
                     <th>角色ID</th>
                     <th>角色名称</th>
 
